APB-109 bugfix css mobile app1 start page, usermenu dropdown equal space around it, app2 settings icon moved to bottom and adjustments toolbars, theme 3 renamed to caffè latte, search center aligned, user_account hover replaced with js so search is hidden, added copright texts to all apps, included search and user_account in app3, bugfix get_info links

--- a/apps/app3/css/app.css
+++ b/apps/app3/css/app.css
@@ -1,14 +1,15 @@
+#profile_info_search{
+	visibility: hidden;
+}
+#user_account{
+	visibility: hidden;
+}
 #common_window_info_content{
 	display: none;
 }
 #common_window_info{
-	width:100%;
-	height:100%;
 	visibility:visible;
-	top:0px;
-	text-align:center;
-	overflow:auto;
-	z-index:11;
+	z-index: 0 !important;
 }
 #common_window_info_info img{
 	max-width:90%;
@@ -31,4 +32,7 @@
 	z-index: 12;
 	background-color: #fefefe;
 	box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);	
+}
+#user_menu_dropdown{
+	background-color: white;
 }
